--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>GeMARA</h1>
-        <h2>Generating RESTful Frontends and Backends</h2>
+        <h2>Generating RESTful Clients and Servers</h2>
         <a href="https://github.com/braunpet/GeMARA" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
